# TeaLeaf

./: CMakeLists.txt  README.md  TODO.txt
src/: TODO.txt  build_field.cpp  build_field.h  calc_dt.cpp  calc_dt.h  data.cpp  data.h  data.hpp  definitions.cpp  definitions.h  definitions.hpp  diffuse.cpp  field_summary.cpp  field_summary.h  generate_chunk.cpp  generate_chunk.h  global_mpi.cpp  initialise.cpp  initialise.h  initialise_chunk.cpp  main.cpp  pack.cpp  pack.h  packing.cpp  packing.h  read_input.cpp  read_input.h  set_field.cpp  set_field.h  start.cpp  start.h  tea.cpp  tea.h  tea.in  tea.in.tmp  tea_leaf_cg.cpp  tea_leaf_common.cpp  tea_leaf_common.h  tea_leaf_jacobi.cpp  tea_leaf_jacobi.h  (+8 more)
src/include/: data.h  definitions.h  diffuse.h  global_mpi.h  initialise.h  initialise_chunk.h  pack.h  read_input.h  set_field.h  tea.h  tea_leaf_cg.h  tea_leaf_jacobi.h  tea_solve.h  timestep.h  visit.h
src/include/kernels/: field_summary_kernel.h  generate_chunk_kernel.h  initialise_chunk_kernel.h  pack_kernel.h  set_field_kernel.h  tea_leaf_common_kernel.h  tea_leaf_jacobi_kernel.h  update_halo_kernel.h  update_internal_halo_kernel.h
src/kernels/: field_summary_kernel.cpp  field_summary_kernel.h  generate_chunk_kernel.cpp  initialise_chunk_kernel.cpp  pack_kernel.cpp  pack_kernel.h  pack_kernel.hpp  set_field_kernel.cpp  tea_leaf_cg_kernel.cpp  tea_leaf_cg_kernel.h  tea_leaf_common_kernel.cpp  tea_leaf_common_kernel.h  tea_leaf_jacobi_kernel.cpp  update_halo_kernel.cpp  update_halo_kernel.h  update_internal_halo_kernel.cpp
